Добавлены ссылки, сделаны псевдоэлементы: afteh, hover, добавлены слайдеры, добавлен config.scss, где есть переменные со значениями для: font-size, font-weight, line-height

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,23 +1,29 @@
 footer.footer 
-    div.wrapper 
-        div.footer__top
-            div.footer__social-media
-                div.footer__social-media__title Подписывайтесь на нас:
+    .wrapper 
+        .footer__top
+            .footer__social-media
+                .footer__social-media__title Подписывайтесь на нас:
             ul.social-media__list.footer__social-media__list
                 li.social-media__item
-                    img.social-media__item__img(src='img/social-media/youtube.svg')
+                    a(href="#")
+                        img.social-media__item__img(src='img/social-media/youtube.svg')
                 li.social-media__item
-                    img.social-media__item__img(src='img/social-media/facebook.svg')
+                    a(href="#")
+                        img.social-media__item__img(src='img/social-media/facebook.svg')
                 li.social-media__item
-                    img.social-media__item__img(src='img/social-media/vk.svg')
+                    a(href="#")
+                        img.social-media__item__img(src='img/social-media/vk.svg')
                 li.social-media__item
-                    img.social-media__item__img(src='img/social-media/ok.svg')
+                    a(href="#")
+                        img.social-media__item__img(src='img/social-media/ok.svg')
                 li.social-media__item
-                    img.social-media__item__img(src='img/social-media/instagram.svg')
+                    a(href="#")
+                        img.social-media__item__img(src='img/social-media/instagram.svg')
 
-        div.footer__bottom
-            div.footer__copyright-privacy-policy
+        .footer__bottom
+            .footer__copyright-privacy-policy
                 p.footer__copyright__text © 2021 «Златоустовское телевидение»
                 a(href="#").footer__privacy-policy__text Политика конфиденциальности
-            div.footer_xpage
-                img.footer_xpage_img(src="img/xpage.svg", alt="xpage logo")
+            .footer_xpage
+                a(href="#") 
+                    img.footer_xpage_img(src="img/xpage.svg", alt="xpage logo")
