--- a/src/components/main/premiere/premiere.pug
+++ b/src/components/main/premiere/premiere.pug
@@ -1,17 +1,16 @@
 section.premiere
-    div.wrapper 
+    .wrapper 
         h1 Премьерные выпуски
-        div.premiere__content   
+        .premiere__content   
             img.premiere__content__img(src="img/pages/main/premiere/video.jpg", alt="премьерное видео")
-            div.premiere__tabs 
-                div.premiere__tabs__item.active
-                    div.premiere__tabs__item__date 02/01/2021
-                    div.premiere__tabs__item__title «Территория закона» 26.01.2021
-                    img.premiere__tabs__item__img(src="img/pages/main/premiere/link", alt="фото для перехода на видео")
-                div.premiere__tabs__item 
-                    div.premiere__tabs__item__date 02/01/2021
-                    div.premiere__tabs__item__title «Сделано в Златоусте» №1 (Никон)
-                div.premiere__tabs__item 
-                    div.premiere__tabs__item__date 02/01/2021
-                    div.premiere__tabs__item__title «Депутатский час» 22.01.2021
+            .premiere__tabs     
+                a(href="#").premiere__tabs__item.active
+                    .premiere__tabs__item__date 02/01/2021
+                    .premiere__tabs__item__title «Территория закона» 26.01.2021
+                a(href="#").premiere__tabs__item 
+                    .premiere__tabs__item__date 02/01/2021
+                    .premiere__tabs__item__title «Сделано в Златоусте» №1 (Никон)
+                a(href="#").premiere__tabs__item 
+                    .premiere__tabs__item__date 02/01/2021
+                    .premiere__tabs__item__title «Депутатский час» 22.01.2021
         button.content-button.premiere__content-button Все выпуски
