--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,13 +1,12 @@
 header.header
-    div.wrapper 
-        div.header__content
+    .wrapper 
+        .header__content
             button.content-button.header__content-button_color_red Предложить новость
-            div.logo.header__logo
-                img.logo-img.header__logo-img_size_pc(src='img/header/logo.svg', alt='Логотип сайта')
-            div.header__phone-search
-                div.header__phone-search-phone
-                    p.header__phone-search-phone-number 8 (3513) 65-17-11
-                div.header__phone-search-search
-                    img.header__phone-search-search-image(src='img/header/search.svg', alt='Иконка поиска')
-
-        include navigation.pug
+            a(href="#").logo.header__logo
+                img.logo-img.header__logo-img(src='img/header/logo.svg' alt='Логотип сайта')
+            .header__phone-search
+                .header__phone-search-phone
+                    a(href="tel:123123213").header__phone-search-phone-number 8 (3513) 65-17-11
+                button.header__phone-search-search
+                    img.header__phone-search-search-image(src='img/header/search.svg' alt='Иконка поиска')
+        include navigation.pug 
