--- a/src/components/main/vector/vector.pug
+++ b/src/components/main/vector/vector.pug
@@ -1,43 +1,45 @@
 section.vector 
-    div.wrapper 
-        div.vector__top 
-            h1 Вектор развития
-            div.vector__top__buttons
-                img.vector__top__buttons__img(src="img/pages/main/vector/back.svg", alt="кнопка назад")
-                img.vector__top__buttons__img(src="img/pages/main/vector/forward.svg", alt="кнопка вперёд")
-        div.vector__content 
+    .wrapper 
+        .vector__top 
+            h1 Вектор развития 
+            .vector__top__buttons 
+                button.vector__top__buttons__back 
+                    img.vector__top__buttons__img(src="img/pages/main/vector/back.svg" alt="кнопка назад")
+                button.vector__top__buttons__forvard
+                    img.vector__top__buttons__img(src="img/pages/main/vector/forward.svg" alt="кнопка вперёд")
+        .vector__content#vector__content 
+
             a.card.all-news__card(href="#")  
                 img.card__item-img(src="img/pages/main/vector/cards/img1.svg" alt="фотография новости")
-                div.card__content
-                    div.card__item-top 
-                        div.tag.card__item-top__tag 19/01/2021
-                    div.card_item-bottom
-                        div.card__item-bottom__title Спортивный центр, доступный для всех жителей города и района метзавода. Бассейн «Сталь» теперь стал муниципальным
-                img.card__item-lick(src="img/fresh-news/cards/link.svg" alt="фотография для переходана на новость")
+                .card__content
+                    .card__item-top 
+                        .tag.card__item-top__tag 19/01/2021
+                    .card_item-bottom
+                        h.card__item-bottom__title Спортивный центр, доступный для всех жителей города и района метзавода. Бассейн «Сталь» теперь стал муниципальным
+
             a.card.all-news__card(href="#")  
                 img.card__item-img(src="img/pages/main/vector/cards/img2.svg" alt="фотография новости")
-                div.card__content
-                    div.card__item-top 
-                        div.tag.card__item-top__tag 15/01/2021
-                    div.card_item-bottom
-                        div.card__item-bottom__title Условия для воспитания и образования в Златоусте – одно из приоритетных направлений
-                img.card__item-lick(src="img/fresh-news/cards/link.svg" alt="фотография для переходана на новость")
+                .card__content
+                    .card__item-top 
+                        .tag.card__item-top__tag 15/01/2021
+                    .card_item-bottom
+                        h.card__item-bottom__title Условия для воспитания и образования в Златоусте – одно из приоритетных направлений
+
             a.card.all-news__card(href="#")  
                 img.card__item-img(src="img/pages/main/vector/cards/img3.svg" alt="фотография новости")
-                div.card__content
-                    div.card__item-top 
-                        div.tag.card__item-top__tag 24/12/2020
-                    div.card_item-bottom
-                        div.card__item-bottom__title Реализовали давно задуманные планы. На златоустовском «Заводе «Стройтехника» открылся ещё один производственный корпус
-                img.card__item-lick(src="img/fresh-news/cards/link.svg" alt="фотография для переходана на новость")
+                .card__content
+                    .card__item-top 
+                        .tag.card__item-top__tag 24/12/2020
+                    .card_item-bottom
+                        h.card__item-bottom__title Реализовали давно задуманные планы. На златоустовском «Заводе «Стройтехника» открылся ещё один производственный корпус
+
             a.card.all-news__card(href="#")  
                 img.card__item-img(src="img/pages/main/vector/cards/img1.svg" alt="фотография новости")
-                div.card__content
-                    div.card__item-top 
-                        div.tag.card__item-top__tag 19/01/2021
-                    div.card_item-bottom
-                        div.card__item-bottom__title Спортивный центр, доступный для всех жителей города и района метзавода. Бассейн «Сталь» теперь стал муниципальным
-                img.card__item-lick(src="img/fresh-news/cards/link.svg" alt="фотография для переходана на новость")
-            
-        div.vector__content-button 
-            button.content-button Больше новостей
+                .card__content
+                    .card__item-top 
+                        .tag.card__item-top__tag 19/01/2021
+                    .card_item-bottom
+                        h.card__item-bottom__title Спортивный центр, доступный для всех жителей города и района метзавода. Бассейн «Сталь» теперь стал муниципальным
+
+        .vector__content-button 
+            button.content-button Больше новостей 
