--- a/src/sass/global/button/content-button.scss
+++ b/src/sass/global/button/content-button.scss
@@ -1,9 +1,16 @@
+@import '../../config.scss';
+
 .content-button {
     background: none;
     padding: 0 34px;
     height: 50px;
     border: 2px solid black;
     border-radius: 56px;
-    font-size: 16px;
     cursor: pointer;
+    font-size: $button-fsize; 
+    line-height: $button-lheight;
+    font-weight: $button-fwidgth;
+    &:hover{
+        background: rgba(155, 155, 155, 0.300);
+    }
 }
