--- a/src/sass/global/header/navigation.scss
+++ b/src/sass/global/header/navigation.scss
@@ -1,3 +1,4 @@
+@import '../../config.scss';
 .menu {
     list-style: none;
     gap: 48px;
@@ -5,17 +6,25 @@
     &-item {
         display: flex;
         align-items: center;
-        font-size: 20px;
         gap: 9px;
-        
 
         &-text {
-            font-weight: bold;
+            font-size: $h-text-fsize;
+            font-weight: $h-text-fweight;
+            line-height: $h-text-lheight;
         }
-        &-img {
-            width: 8px;
-            height: 4px;
-        }
+
+        &-img {}
+    }
+}
+
+.openable {
+    &::after {
+        content: "";
+        width: 8px;
+        height: 4px;
+        background-image: url('img/header/nav/arrow_to_down.svg');
+        background-size: cover;
     }
 }
 
@@ -26,11 +35,12 @@
     &-item {
 
         display: inline-block;
-        font-size: 20px;
 
         &-text {
             padding-right: 32px;
-            font-weight: bold;
+            font-size: $h-text-fsize;
+            font-weight: $h-text-fweight;
+            line-height: $h-text-lheight;
 
         }
 
@@ -42,15 +52,13 @@
     }
 }
 
- 
-.navigation { 
+.navigation {
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: #373334;
     height: 27px;
     padding-bottom: 24px;
-
     &__menu {
         list-style: none;
         gap: 48px;
@@ -79,7 +87,119 @@
                 font-weight: bold;
             }
 
-            &-img {}
+            &__img {}
         }
+    }
+}
+.burger-checkbox,
+.burger{
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 320px) {
+    .navigation{
+        position: absolute;
+        top: 28px;
+        width: 20px;
+    }
+    .social-media{
+        visibility: hidden;
+        overflow: hidden;
+    }
+    .burger-checkbox,
+    .burger{
+        visibility: visible;
+    }
+    .menu {
+        position: relative;
+    }
+
+    .burger-checkbox {
+        position: absolute;
+        visibility: hidden;
+    }
+
+    .burger {
+        position: relative;
+        z-index: 1;
+        cursor: pointer;
+        display: block;
+        position: relative;
+        border: none;
+        background: transparent;
+        width: 40px;
+        height: 26px;
+    }
+
+    .burger::before,
+    .burger::after {
+        content: '';
+        left: 0;
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 4px;
+        border-radius: 10px;
+        background: #000;
+    }
+
+    .burger::before {
+        top: 0;
+        box-shadow: 0 11px 0 #000;
+        transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
+    }
+
+    .burger::after {
+        bottom: 0;
+        transition: bottom .3s .15s, transform .3s;
+    }
+
+    .burger-checkbox:checked+.burger::before {
+        top: 11px;
+        transform: rotate(45deg);
+        box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+        transition: box-shadow .15s, top .3s, transform .3s .15s;
+    }
+
+    .burger-checkbox:checked+.burger::after {
+        bottom: 11px;
+        transform: rotate(-45deg);
+        transition: bottom .3s, transform .3s .15s;
+    }
+
+    .menu-list {
+        overflow: hidden;
+        top: 0;
+        left: 0;
+        position: absolute;
+        display: grid;
+        gap: 12px;
+        padding: 42px 0;
+        margin: 0;
+        background: none;     
+        list-style-type: none;
+        transform: translateX(-100%);    
+        transition: .3s; 
+        width: 200px;
+        visibility: hidden;
+    }
+
+    .menu-item {
+        visibility: hidden;
+        display: block; 
+        padding: 8px;
+        color: white;
+        font-size: 18px;
+        text-align: center;
+        text-decoration: none;
+    }
+
+    .menu-item:hover {
+        background: rgba(255, 255, 255, .2)
+    }
+
+    .burger-checkbox:checked~.menu-list {
+        // visibility: visible;
+        transform: translateX(0);
     }
 }
