--- a/src/sass/pages/main/banner/banner.scss
+++ b/src/sass/pages/main/banner/banner.scss
@@ -2,7 +2,6 @@
     margin-top: 85px;
     max-height: 400px;
     padding-bottom: 97px;
-    border-bottom: 4px solid #373334;
     &-wide{
         background: black;
         max-width: 1503px;
@@ -14,5 +13,24 @@
     }
     &__img{
     }
-    
+    .wrapper{
+        &::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 4px; 
+            background-color: #373334;
+            margin-top: 97px; 
+        }
+    }
+}
+@media only screen and (max-width: 320px) {
+    .banner{
+        &-wide{
+            height: 276px;
+        }
+        &__img{
+            width: 80%;
+        }
+    }
 }
