--- a/src/sass/pages/main/premiere/premiere.scss
+++ b/src/sass/pages/main/premiere/premiere.scss
@@ -1,26 +1,28 @@
+@import '../../../config.scss';
+
 .premiere {
-    padding: 120px 0 !important;
+    padding: 120px 0;
     background-color: #373334;
     margin: 0 auto;
-    flex-grow: 1fr 1fr;
 
     h1 {
-        font-size: 100px;
-        font-weight: bold;
+        font-size: $h1-fsize;
+        font-weight: $h1-fweight;
+        line-height: $h1-lheight;
         max-width: 700px;
-        line-height: 90%;
         color: #fff;
         padding-bottom: 65px;
     }
 
     &__content {
         color: #fff;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
         grid-gap: 50px;
         padding-bottom: 70px;
+
         &__img {
-            height: 408px;
+            width: 100%;
+            height: 100%;
         }
     }
 
@@ -29,34 +31,97 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        justify-content: space-between;
+
+
         &__item {
+            text-decoration: none;
+            color: #fff;
             border-top: 1px solid #fff;
             border-bottom: 1px solid #fff;
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            padding: 45px 0;
+            flex-grow: 1;
+
+            position: relative;
+
+            &::after {
+                content: "";
+                display: none;
+                width: 22px;
+                height: 19px;
+                filter: brightness(0) invert(1);
+                background-image: url(img/pages/main/premiere/link.svg);
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                transition: opacity 0.3s;
+            }
+
+            &:hover::after {
+                display: block;
+            }
 
             &__date {
-                font-size: 16px;
                 margin-right: 70px;
+                font-size: $premiere__date-fsize;
+                font-weight: $premiere__date-fwidgth;
+                line-height: $premiere__date-lheight;
             }
 
             &__title {
-                font-size: 24px;
-                
+                font-size: $premiere__tit-fsize;
+                font-weight: $premiere__tit-fwidgth;
+                line-height: $premiere__tit-lheight;
+
             }
 
-            &__img {
-                max-width: 21.06px;
-                max-height: 18px;
-                margin-left: 230px;
-            }
+            &__img {}
         }
     }
-    &__content-button{
+
+    &__content-button {
         border: 2px solid white;
         color: white;
-        
+
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .premiere {
+        h1 {
+            font-size: $mobile-h1-fsize;
+            font-weight: $mobile-h1-fweight;
+            line-height: $mobile-h1-lheight;
+            padding-bottom: 35px;
+        }
+
+        &__content {
+            flex-wrap: wrap;
+        }
+
+        &__tabs {
+
+            &__item {
+                padding: 20px 0;
+                display: block;
+
+                &__date {
+                    font-size: $mobile-premiere__date-fsize;
+                    line-height: $mobile-premiere__date-lheight;
+                }
+
+                &__title {
+                    font-size: $mobile-premiere__tit-fsize;
+                    line-height: $mobile-premiere__tit-lheight;
+                }
+            }
+        }
+
+        &__content-button {
+            width: 100%;
+        }
     }
 }
